FreeST/test/Programs/ValidTests/Modules/BackImport/BackImport.fst
module BackImport where

import A.ImportBack

main : Int
main = f
