FreeST/test/Programs/InvalidTests/Modules/ImportNotFound/ImportNotFound.fst
module ImportNotFound where

import NotFound

main : Bool
main = False
